# token_authentication_public

./: .gitignore  Cargo.toml  README.md  READMEa.md  authentication.postman_collection.json
config/: env.json
sql/: schema_reset.sql
src/: main.rs
src/api/: authentication.rs  mod.rs
src/api/services/: api.rs  internal.rs  mod.rs  users.rs
src/auth/: crypt.rs
src/config/: environment.rs  mod.rs  openssl.rs  shutdown.rs
src/crons/: mod.rs  sessions.rs
src/database/: db_conn.rs  mod.rs
src/general/: http_req_res.rs  macros.rs  mod.rs  types.rs
src/modules/users/: functions.rs  mod.rs  services.rs  user.rs  users_sessions.rs
