[package]
name = "token_authentication_public"
version = "0.1.0"
authors = ["Tommy Ponce: nacho.ponce25@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.4.0", features = ["openssl"] }
chrono = { version = "0.4.28"}
lazy_static = "1.4.0"
mysql_async = { version = "0.32.2", features = ["default"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.105" }
tokio = { version = "1.32.0", features = ["full"]}
error_mapper = { version = "0.3.6", features = ["full"] }
#error_mapper = { path = "../error_mapper", features = ["full"] }
openssl = { version = "0.10.57", features = [] }
rand = "0.8.5"
futures-util = "0.3.28"